// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:inputArray 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ComboControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Combo __AMIS_COMPONENT_CLASS_PREFIX__Combo--multi __AMIS_COMPONENT_CLASS_PREFIX__Combo--hor"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-items"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="amis"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-delBtn"
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                class="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-toolbar"
                        >
                          <button
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              class="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              新增
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with draggable & draggableTip 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ComboControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Combo __AMIS_COMPONENT_CLASS_PREFIX__Combo--multi __AMIS_COMPONENT_CLASS_PREFIX__Combo--hor is-draggable"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-items"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemDrager"
                            >
                              <a
                                data-position="bottom"
                                data-tooltip="拖拽排序"
                              >
                                <icon-mock
                                  class="icon icon-drag-bar"
                                  icon="drag-bar"
                                />
                              </a>
                            </div>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="red"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-delBtn"
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                class="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemDrager"
                            >
                              <a
                                data-position="bottom"
                                data-tooltip="拖拽排序"
                              >
                                <icon-mock
                                  class="icon icon-drag-bar"
                                  icon="drag-bar"
                                />
                              </a>
                            </div>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="blue"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-delBtn"
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                class="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemDrager"
                            >
                              <a
                                data-position="bottom"
                                data-tooltip="拖拽排序"
                              >
                                <icon-mock
                                  class="icon icon-drag-bar"
                                  icon="drag-bar"
                                />
                              </a>
                            </div>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="green"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-delBtn"
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                class="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-toolbar"
                        >
                          <button
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              class="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              新增
                            </span>
                          </button>
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-dragableTip"
                          >
                            我是拖拽提示
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with minLength & maxLength 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ComboControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Combo __AMIS_COMPONENT_CLASS_PREFIX__Combo--multi __AMIS_COMPONENT_CLASS_PREFIX__Combo--hor"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-items"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="green"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value=""
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-toolbar"
                        >
                          <button
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              class="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              新增
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with removable & addable & addButtonText: false 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ComboControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Combo __AMIS_COMPONENT_CLASS_PREFIX__Combo--multi __AMIS_COMPONENT_CLASS_PREFIX__Combo--hor"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-items"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="red"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="blue"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-toolbar"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with removable & addable & addButtonText: false 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ComboControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Combo __AMIS_COMPONENT_CLASS_PREFIX__Combo--multi __AMIS_COMPONENT_CLASS_PREFIX__Combo--hor"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-items"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="blue"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-delBtn"
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                class="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-toolbar"
                        >
                          <button
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              class="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              我是增加按钮
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
